--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -15,11 +15,6 @@
 
     --website-text: rgb(126, 90, 0);
     --website-light-text: rgb(198, 147, 19);
-    --website-gradient-text: linear-gradient(to left, rgb(126, 90, 0) 0%, rgb(198, 147, 19) 50%, rgb(126, 90, 0) 100%);
-
-    --nav-bar-background: linear-gradient(to bottom, rgb(255, 115, 0) 0%, rgb(248, 206, 171) 100%);
-    --nav-bar-border: rgb(255, 115, 0);
-    --webpage-background: linear-gradient(to top, rgb(255, 115, 0) 0%, rgb(248, 206, 171) 100%);
     --webpage-static-background: rgb(248, 206, 171);
 
     --translucent-background: rgba(255, 255, 255, 0.25);
@@ -29,6 +24,7 @@
     --empty-border: 2px solid rgba(0, 0, 0, 0);
     --thin-empty-border: 1px solid rgba(0, 0, 0, 0);
     --default-transition: border 0.2s, color 0.2s, background-color 0.2s, box-shadow 0.2s;
+    --extra-transition: border 0.5s ease-out, box-shadow 0.5s ease-out, color 0.5s ease-out;
 }
 
 body {
@@ -63,9 +59,9 @@ a, RouterLink {
     width: 950px;
     height: 100%;
     padding: 0px calc(50% - 475px);
-    min-height: 700px;
+    min-height: 550px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
 }
 
 .projects-card-container {
@@ -78,12 +74,13 @@ a, RouterLink {
 
 @media (max-width: 950px) {
     .projects-card-grid {
-        grid-template-columns: 1fr;
-        width: 100%;
         padding: 0px;
+        width: 100%;
     }
-    .projects-card-container {
-        padding: 30px 0px;
+}
+@media (max-width: 550px) {
+    .projects-card-grid {
+        min-height: 400px;
     }
 }
 @media (max-width: 340px) {
